// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animated is true 1`] = `
<div
  className="flex-100 layout-column layout-align-center-center"
  style={
    Object {
      "opacity": 1,
      "transition": "0.5s",
    }
  }
>
  <p
    className="display"
  >
    OPTIONAL_TEXT
  </p>
  <div
    className="circle_animate circle layout-row layout-align-center-center"
    style={
      Object {
        "border": "undefined solid 2px",
        "color": undefined,
        "height": 100,
        "margin": "2rem",
        "width": 100,
      }
    }
  >
    <i
      className="ICON"
      style={
        Object {
          "fontSize": "50px",
        }
      }
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-column layout-align-center-center"
  style={
    Object {
      "opacity": 1,
      "transition": "0.5s",
    }
  }
>
  <p
    className="display_none"
  >
    OPTIONAL_TEXT
  </p>
  <div
    className="false circle layout-row layout-align-center-center"
    style={
      Object {
        "height": 100,
        "margin": "2rem",
        "width": 100,
      }
    }
  >
    <i
      className="ICON"
      style={
        Object {
          "fontSize": "50px",
        }
      }
    />
  </div>
</div>
`;
